tests/ui/typst_requires_feature/text_engine_typst.rs
use ruviz::core::plot::TextEngineMode;

fn main() {
    let _ = TextEngineMode::Typst;
}
